# c-semantics

./: .gitignore  .gitmodules  C18.md  Dockerfile  Dockerfile.mount-k  INSTALL.md  Jenkinsfile  LICENSE  Makefile  README  README.md  README.mk  README.txt  build.sh  jenkins.sh
78k0r/include/: kcc_settings.h  sfr.h  stdarg.h
78k0r/semantics/: extensions-common.k  extensions-translation.k  settings.k
78k0r/src/: sfr.c  string.c
cil-semantics/: README.md  cil-common.k  cil-const-propagation.k  cil-decl.k  cil-exp.k  cil-implementation.k  cil-lib.k  cil-stmt.k  cil-syntax.k  cil-typing.k  cil.k  kcil  kcil-pp  kcil-preproc  kcil-runner  kcil.sh  runcil  test.cil.c  test1.cil.c  test2.cil.c  test3.cil.c
cil-semantics/ktool-tests/: test1.c  test2.c
cil-semantics/patterns/: list_pattern.k  mint_list.k  mint_set.k  tree_pattern.k
cil-semantics/tests/: config.xml  decl.c  global.c  runtests  struct.c  test1.c  test1.cil  test1.cil.c.out  test2.c  test2.cil  test3.c  test5.c
cil-semantics/verification/: binary_search_tree.c  list_pattern.k  list_reverse.c  list_reverse.cil.c  list_reverse_spec.k  sum.cil.c  sum_short.cil.c  sum_spec.k
clang-tools/: .gitignore  CMakeLists.txt  CallSites.cc  ClangKast.cc  ClangKast.h  GetKastVisitor.h  globs.h
clang-tools/CallSites/: CallSites.cc
clang-tools/ClangKast/: ClangKast.cc  ClangKast.h  GetKastVisitor.h
cpp-parser/: .gitignore  CMakeLists.txt  ClangKast.cc
default-profile/include/: iso646.h  stdint.h  stdio.h
default-profile/semantics/: extensions-execution.k  settings.k
examples/: README  README.md
examples/demo/: 1-unsequenced-side-effect.c  2-buffer-overflow.c  2-buffer-overflow.h  3-array-in-struct.c  4-buffer-underflow-external.c  5-buffer-overflow-environment.c  6-int-overflow.c  7-out-of-lifetime.c  8-int-overflow-tricky.c  9-memory-leak.c
examples/error-codes/: Error_Codes.csv  Makefile  README.md
examples/ltlmc/: bad.c  good.c  lights.c
examples/minimal/: CB1-bad.output  CCV3-bad.c  CCV4-bad.output  CCV5-bad.output  CCV6-bad.output  CCV7-bad.output  CDI1-bad.output  CDI4-bad.output  CDT1-bad.output  CEA1-bad.output  CEA2-bad.output  CEA3-bad.output  CEA4-bad.c  CEA6-bad.output  CEA9-good.c  CEB10-bad.c  CEB12-bad.output  CEB2-bad.output  CEB4-bad.c  CEB4-bad.output  CEB6-bad.output  CEB8-good.c  CEE1-bad.output  CEE2-bad.output  CEE4-bad.output  CEM1-bad.output  CEM2-bad.c  CEM2-bad.output  CEM3-bad.output  CER1-bad.output  CER3-good.c  CER4-bad.output  CERL1-bad.output  CID1-bad.output  CTM1-bad.output  CV-CCV9-bad.c  CV-CEA7-bad.c  CV-CEA8-good.c  CV-CEB1-good.c  CV-CEB10-good.c  (+73 more)
examples/search/: undefAdd.c  undefAdd1.c  undefComma.c
examples/simple/: Error_Codes.csv  README.md
gcc-test/: Makefile  README
gcc-test/gcc.all/: argTypes.patch  fix.sh  val.sh
gcc-test/lib/: c-torture.exp  timeout.exp
inProgress/: atomic.c  charNotcompat.c  complex.c  concurrencyPaper.txt  cq-header.h  hines.c  lights.c  localExtern.c  noreturn.c  passConst.c  spawn.c  two-link1.c  two-link2.c  twoWritesToX.c  xFailReturn.c
inProgress/fromLCC/: 8q.c  init.c  switch.c
inProgress/paper/: fullNonDet.c  philosophers.c
inProgress/thesis/: dekker.c  nondet.c  philosophers.c  quicksort.c  racyQuicksort.c
latex/: semantics.sty
libc/includes/: assert.h  complex.h  fenv.h  float.h  kcc_settings.h  limits.h  locale.h  math.h  setjmp.h  signal.h  stdalign.h  stdatomic.h  stdbool.h  stddef.h  stdint.h  (+7 more)
licenses/: LICENSE-CIL-C-PARSER  LICENSE-ORIGINAL-C-SEMANTICS  chucky  parser
memory-bench/: 20010329-1.c  20021010-2.c  20040409-1.c  20040409-3.c  20041112-1.c  20060110-1.c  20060110-2.c  20100430-1.c  920711-1.c  921202-1.c  930719-1.c  941014-2.c  960116-1.c  980605-1.c  bench.pl  checkpointer  init.h  loop-15.c  mybench.pl
native-server/: README.md  main.c  platform.h  server.c  server.h
parser/: LICENSE  Makefile  cabs.ml  cabsDriver.ml  cabsPrinter.ml  cabshelper.ml  clexer.mll  cparser.mly  cprint.ml  errormsg.ml  frontc.ml  growArray.ml  kPrinter.ml  kprinter.ml  longarray.ml  whitetrack.ml  xmlPrinter.ml
profiles/: no-hwa
programs/: c1x-6-2-7-5-link1.c  c1x-6-2-7-5-link2.c  c1x-6-2-7-5b.c  fileio.c  testprintf.c  thread.c
scripts/: accessProfiling.pl  analyzeProfile.pl  append.sh  build-logger.sh  checkForModules.pl  compile.pl  compile.sh  compileProgram.sh  crun  docker-build  docker-entrypoint.sh  extract-references.cpp  fileserver.pl  gccsymdump  gen-file-atomically.sh  gen-makefile-atomically.sh  getFirstLine.pl  getopt.pl  globalize-syms  graphSearch.pl  histogram-csv  ignored-flags  initializeProfiler.pl  insert.sh  k++  kcc  kcc-switch  kompile-options-sanitizer.sh  kompile-wrapper  kranlib  link.pl  logger  make-symbols  make-trampolines  merge-kcc-obj  optimizer.pl  parser3  please  printInfo.sh  printProfileData.pl  (+25 more)
semantics/: Makefile  README.md  bitsize.k  c-configuration.k  c-cpp-linking.k  c-cpp.k  c-declarations.k  c-helpers.k  c-maude.template  c-settings.k  c-syntax.k  c-syntax.template  c-translation.k  c-typing.k  c.k  c11-cpp14-linking.k  c11-cpp14.k  c11-trans.k  c11-translation.k  c11.k  common-c-configuration.k  common-c-conversions.k  common-c-declarations.k  common-c-errors.k  common-c-expressions.k  common-c-helpers.k  common-c-memory.k  common-c-semantics.k  common-c-sized-operations.k  common-c-standard-lib.k  common-c-statements.k  common-c-syntax.k  common-c-typing.k  compat.k  configuration.k  conversion.k  conversions-misc.k  conversions.k  cpp-translation.k  cpp14-translation.k  (+58 more)
setup/: README.md
tests/: Makefile  adhocTests.pl  check-results.mk  j033b.c  runtest.pl  undefined-tests-summary.ods
verification/: annotation.k  avl.c  avl_delete_spec.k  avl_find_spec.k  avl_insert_spec.k  bst.c  bst_delete_spec.k  bst_find_spec.k  bst_insert_spec.k  c-verifier.k  delete_spec.k  insert_spec.k  int_list.k  int_set.k  lemmas.k  list.c  list_append_spec.k  list_bubble_sort_spec.k  list_insertion_sort_spec.k  list_merge_sort_spec.k  list_pattern.k  list_quick_sort_spec.k  list_reverse_spec.k  max_spec.k  run.sh  tree_pattern.k
x86-gcc-limited-libc/: cc  cpp-pp  pp
(+7682 files in other folders)
